use mock data for sales, fix sql generation, fix null column bug
