# openapi/apispec.yaml
@@ -17,13 +17,13 @@ paths:
           name: start_date
           schema:
             type: string
-            pattern: '^\\d{4}-\\d{2}$'
+            format: date
           description: Filter sales starting from this date (inclusive)
         - in: query
           name: end_date
           schema:
             type: string
-            pattern: '^\\d{4}-\\d{2}$'
+            format: date
           description: Filter sales up to this date (inclusive)         
         - in: query
           name: product_ids
@@ -69,10 +69,10 @@ paths:
       responses:
         '201':
           description: Purchase order created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PurchaseOrder'
+          # content:
+          #   application/json:
+          #     schema:
+          #       $ref: '#/components/schemas/PurchaseOrder'
 
   /purchase-orders/{id}:
     delete:
@@ -117,6 +117,8 @@ components:
           format: date
         product_id:
           type: integer
+        product_name:
+          type: string
         quantity:
           type: integer
         created_at:
